codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__project_chooser__tests__project_chooser.snap
---
source: tui/src/bottom_pane/project_chooser.rs
expression: "render_snapshot(&view, 80)"
---
Open Project In RIGHT Tab                                                       
Choose a favorite, or browse into a directory and press Enter.                  
/workspace                                                                      
╔Favorites═══════════════════════╗┌Browser: /workspace─────────────────────────┐
║> ● codex                       ║│  .. /                                      │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
╚════════════════════════════════╝└────────────────────────────────────────────┘
enter to open project                                                           
x to browse directory | esc to cancel
