codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__project_chooser__tests__split_pane_project_chooser.snap
---
source: tui/src/bottom_pane/project_chooser.rs
expression: "render_snapshot(&view, 80)"
---
Open Project In New Horizontal Pane                                             
Choose a favorite, or browse into a directory. Enter resumes; X starts fresh.   
/workspace                                                                      
╔Favorites═══════════════════════╗┌Browser: /workspace─────────────────────────┐
║> ● codex                       ║│  .. /                                      │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
║                                ║│                                            │
╚════════════════════════════════╝└────────────────────────────────────────────┘
enter to resume project | x to open fresh                                       
right/l to browse directory | esc to cancel
